# RFGuess

./: .gitignore  .pre-commit-config.yaml  Journal.md  LICENSE  RFGuess.spec  Readme.md  ReadmeDemo.md  ReadmeDevLog.md  _DevLog.md  database_structure.sql  dataset12306.sql  docker-compose.yml  guess_full.txt  guess_test.txt  guesses.txt  main.py  mkdocs.yml  passwordDic.txt  passwords_general.txt  patterns.txt  patterns_general.txt  pii.json  pyproject.toml  requirements.txt  requirements_bak.txt  save_test.clf  test.py
Classifiers/: DTTrainner.py  PIIRFTrainner.py  RFTrainner.py  _RFTest.py  _TrainnersTest.py  test_PIIRFTrainner.py
Commons/: BasicTypes.py  DatabaseLayer.py  Exceptions.py  Modes.py  Property.py  Utils.py  jinjiaUtils.py  pinyinUtils.py
Context/: Container.py  Context.py
Core/: Application.py  Callers.py  Component.py  Config.py  Decorators.py  Utils.py  __init__.py
Datasets/: save1.txt  testdataset1.txt
Diagrams/: DatabaseLayer.drawio  databaseInit.drawio  databaseInit.html  piiparser.drawio  piiparser.html
Generators/: DatasetGenerator.py  DictionaryGenerator.py  GeneralPIIGenerators.py  PIIGenerators.py  PasswordGuessGenerator.py
Parser/: BasicDataTypes.py  BasicFactory.py  BasicParsers.py  BasicPreprocessor.py  CommonParsers.py  Config.py  DatasetParser.py  Factory.py  GeneralPIIDataTypes.py  GeneralPIIParsers.py  PIIDataTypes.py  PIIParsers.py  PIIPreprocessor.py  PasswordParsers.py
Scripts/: Utils.py  buildDatabase.py  call_databaseInit.py  databaseInit.py  main_General_PII_Mode.py  main_PII_Mode.py
Tests/: main_General_PII_Mode.py  (+24 more)
(+44 files in other folders)
